--- a/eduardo_assignment02_index.html
+++ b/eduardo_assignment02_index.html
@@ -12,9 +12,10 @@
 
 
 <body>
-<header style="background-image:url(assets/img/annie.jpg)"> <!-- background image -->>
+<header style="background-image:url(assets/img/annie.jpg)"> <!-- background image -->
 <div class="HomePage1">
-    <img src="assets/img/food.jpeg" height="150" width="300" alt="food">
+    <img class="logo"
+            src="assets/img/food.jpeg" height="150" width="300" alt="food">
     <h1 class="title">Culinary Fusion Fest: A Global Gastronomic Adventure</h1>
     <nav>
         <ul id="Menu">
@@ -38,9 +39,45 @@
     <address>George Brown College, 160 Kendal Ave, Toronto, ON M5R 1M3</address>
 </div>
 
+<!--Part 2 -->
+
+<div id=Guest_Chefs>
+<h2>Guest Chefs</h2>
+    <figure class="chef1">
+        <img src="assets/img/chef1.jpeg" alt="chef1" width="375" height="250">
+
+        <figcaption>Henrique Aranha Fogaça is a Brazilian chef, businessman, skateboarder and singer, known for being one of the judges on the Brazilian version of the culinary talent show MasterChef, broadcast by Band. Furthermore, Fogaça is the vocalist and composer of the hardcore band Oitão. Hover to see his special dish!</figcaption>
+
+        <img class="chef1food"
+                src="assets/img/chef1food.jpeg" alt="chef1food" width="375" height="250">
+    </figure>
 
 
-<div id=Guest_Chefs></div>
+
+    <br>
+
+
+
+    <figure class="chef2">
+        <img src="assets/img/chef2.jpeg" alt="chef2" width="300" height="338">
+        <figcaption>description</figcaption>
+    </figure>
+
+    <br>
+
+    <figure class="chef3">
+        <img src="assets/img/chef3.jpeg" alt="chef3" width="300" height="300">
+        <figcaption>description</figcaption>
+    </figure>
+
+    <br>
+</div>
+
+
+
+
+
+
 
 <div id="Food-Gallery"></div>
 
