--- a/eduardo_assignment02_index.html
+++ b/eduardo_assignment02_index.html
@@ -13,19 +13,19 @@
 
 <body>
 <header style="background-image:url(assets/img/annie.jpg)"> <!-- background image -->
-<div class="HomePage1">
-    <img class="logo"
-            src="assets/img/food.jpeg" height="150" width="300" alt="food">
-    <h1 class="title">Culinary Fusion Fest: A Global Gastronomic Adventure</h1>
-    <nav>
-        <ul id="Menu">
-            <li><a href="#Event-Details">Event Details</a></li>
-            <li><a href="#Guest_Chefs">Guest Chefs</a></li>
-            <li><a href="#Food-Gallery">Food Gallery</a></li>
-            <li><a href="#Culinary-Workshops">Culinary Workshops & Tastings</a></li>
-        </ul>
-    </nav>
-</div>
+    <div class="HomePage1">
+        <img class="logo"
+             src="assets/img/food.jpeg" height="150" width="300" alt="food">
+        <h1 class="title">Culinary Fusion Fest: A Global Gastronomic Adventure</h1>
+        <nav>
+            <ul id="Menu">
+                <li><a href="#Event-Details">Event Details</a></li>
+                <li><a href="#Guest_Chefs">Guest Chefs</a></li>
+                <li><a href="#Food-Gallery">Food Gallery</a></li>
+                <li><a href="#Culinary-Workshops">Culinary Workshops & Tastings</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
 <div id="Event-Details">
@@ -35,45 +35,47 @@
 
             At this extraordinary event, food becomes a universal language, spoken through a myriad of dishes that tell the story of cultures and traditions from around the globe. Whether you're a seasoned foodie or simply a lover of good food, the Culinary Fusion Fest promises an unforgettable journey through the world of cuisine.</p>
     </article>
-    <time>Saturday,November 18th</time>
-    <address>George Brown College, 160 Kendal Ave, Toronto, ON M5R 1M3</address>
+    <time><strong>Saturday,November 18th</strong></time>
+    <address><strong>George Brown College, 160 Kendal Ave, Toronto, ON M5R 1M3</strong></address>
 </div>
 
 <!--Part 2 -->
 
 <div id=Guest_Chefs>
-<h2>Guest Chefs</h2>
+    <h2>Guest Chefs</h2>
     <figure class="chef1">
         <img src="assets/img/chef1.jpeg" alt="chef1" width="375" height="250">
 
         <figcaption>Henrique Aranha Fogaça is a Brazilian chef, businessman, skateboarder and singer, known for being one of the judges on the Brazilian version of the culinary talent show MasterChef, broadcast by Band. Furthermore, Fogaça is the vocalist and composer of the hardcore band Oitão. Hover to see his special dish!</figcaption>
 
         <img class="chef1food"
-                src="assets/img/chef1food.jpeg" alt="chef1food" width="375" height="250">
+             src="assets/img/chef1food.jpeg" alt="chef1food" width="375" height="250">
     </figure>
-
-
 
     <br>
 
-
-
     <figure class="chef2">
         <img src="assets/img/chef2.jpeg" alt="chef2" width="300" height="338">
-        <figcaption>description</figcaption>
+        <figcaption>Gordon Ramsay, (born November 8, 1966, Johnstone, Scotland), Scottish chef and restaurateur known for his highly acclaimed restaurants and cookbooks but perhaps best known in the early 21st century for the profanity and fiery temper that he freely displayed on television cooking programs.</figcaption>
+
+        <img class="chef2food"
+                src="assets/img/chef2food.jpeg" alt="chef2food" width="300" height="338">
     </figure>
 
     <br>
 
     <figure class="chef3">
         <img src="assets/img/chef3.jpeg" alt="chef3" width="300" height="300">
-        <figcaption>description</figcaption>
+        <figcaption>Since the mid-1980s, he has been called the primus inter pares of Paris three star chefs for his work both at Jamin and at his eponymous restaurant. Robuchon has been known for the relentless perfectionism of his cuisine he said there is no such thing as the perfect meal – one can always do better. </figcaption>
+
+        <img class="chef3food"
+                src="assets/img/chef3food.jpeg" alt="chef3food" width="300" height="300">
     </figure>
 
     <br>
 </div>
 
-
+<!--Part 2 -->
 
 
 
