--- a/eduardo_assignment02_index.html
+++ b/eduardo_assignment02_index.html
@@ -37,12 +37,18 @@
     </article>
     <time><strong>Saturday,November 18th</strong></time>
     <address><strong>George Brown College, 160 Kendal Ave, Toronto, ON M5R 1M3</strong></address>
+
+    <!-- Event Location section 7-->
+    <section class="map">
+        <iframe width="100%" height="191" src="https://maps.google.com/maps?width=100%25&amp;height=250&amp;hl=en&amp;q=175%20Kendal%20Ave,%20Toronto,%20ON%20M5R%203S8+(George%20brown%20College)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></section>
+    <!-- Event Location section 7 -->
+
 </div>
 
 <!--Part 2 -->
-
+<h2 class="hguestchef">Guest Chefs
+<p>Savor a culinary extravaganza featuring world-renowned chefs. Henrique Forgaca's "Steak Tartare of Mignon," Gordon Ramsay's "Beef Wellington," and Chef Joel's "Pommes Purée" promise a feast of flavors.</p></h2>
 <div id=Guest_Chefs>
-    <h2>Guest Chefs</h2>
     <figure class="chef1">
         <img src="assets/img/chef1.jpeg" alt="chef1" width="375" height="250">
 
@@ -66,7 +72,7 @@
 
     <figure class="chef3">
         <img src="assets/img/chef3.jpeg" alt="chef3" width="300" height="300">
-        <figcaption>Since the mid-1980s, he has been called the primus inter pares of Paris three star chefs for his work both at Jamin and at his eponymous restaurant. Robuchon has been known for the relentless perfectionism of his cuisine he said there is no such thing as the perfect meal – one can always do better. </figcaption>
+        <figcaption>Since the mid-1980s, he has been called the primus inter pares of Paris "three star" chefs for his work both at Jamin and at his eponymous restaurant. Robuchon has been known for the relentless perfectionism of his cuisine he said there is no such thing as the perfect meal – one can always do better. </figcaption>
 
         <img class="chef3food"
                 src="assets/img/chef3food.jpeg" alt="chef3food" width="300" height="300">
@@ -78,12 +84,41 @@
 <!--Part 2 -->
 
 
+<div class="GalleryP">
+<h2>Food Gallery</h2>
+<p>Our Gallery Section is a feast for the eyes. Explore an array of tantalizing images from past events and behind-the-scenes glimpses of your favorite chefs foods. Click on any image to experience a larger-than-life view.</p>
+</div>
+
+<div id="Food-Gallery">
+
+    <!-- Image 1 -->
+    <figure class="image-container">
+        <img class="image" src="assets/img/image1.jpg" alt="Image 1">
+
+    </figure>
+
+    <!-- Image 2 -->
+    <figure class="image-container">
+        <img class="image" src="assets/img/image2.jpg" alt="Image 2">
+
+    </figure>
+
+    <!-- Image 3 -->
+    <figure class="image-container">
+        <img class="image" src="assets/img/image3.jpg" alt="Image 3">
+
+    </figure>
+
+</div>
 
 
 
-<div id="Food-Gallery"></div>
+
 
 <div id="Culinary-Workshops"></div>
+
+
+
 
 
 <!-- HTML code goes here -->
